# Blog

./: Cargo.toml  README.md  blog.db  diesel.toml
migrations/2025-07-11-124754_create_users/: up.sql
migrations/2025-07-11-125155_index_usernname/: down.sql  up.sql
migrations/2025-07-12-172456_create_posts/: up.sql
migrations/2025-07-15-121159_create_comments/: up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs
src/routes/: comments.rs  posts.rs  users.rs
