[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
diesel = {version = "2.2.12", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
routes = "0.1.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
log = "0.4"
actix-rt = "2.10.0"
